Irregular line wrap and fixes
incorrectly set 'height' instead of 'line-height' for nav menu list
selector.

--- a/history.css
+++ b/history.css
@@ -36,13 +36,15 @@ nav {
     float: left;
     width: 15em;
     background-color: rgb(51,51,51);
+    
 }
 nav ul li{
     font-family: 'Century Gothic', sans-serif;
     font-size: 0.7em;
     list-style-type: none;
     margin: 0 0 1.2em 1em;
-    height: 1.4em;
+    line-height: 1.4em;
+    
 }
 nav ul li a{
     color: rgb(212,212,212);
@@ -84,4 +86,11 @@ nav ul li a:hover{
 }
  section p:first-of-type:first-line {
     text-transform: uppercase;
+}
+
+/*Setting up irregular line wrap*/
+#speech img{
+    clear: right;
+    float: right;
+    height: 4em;
 }
